[package]
name = "training"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
axum-core = "0.3.2"
bytes = "1.4.0"
h2 = "0.3.15"
hyper = "0.14.24"
lazy_static = "1.4.0"
regex = "1.7.1"
serde = "1.0.152"
serde-with-expand-env = "1.1.0"
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
